--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
 	</developers>
   <scm>
   	<url>https://github.com/RogerParkinson/MaduraDateTime/</url>
-  	<connection>scm:svn:https://github.com/RogerParkinson/MaduraDateTime.git</connection>
-  	<developerConnection>scm:git:ssh://git@github.com:RogerParkinson/MaduraDateTime.git</developerConnection>
+  	<connection>scm:git:ssh://git@github.com:RogerParkinson/MaduraDateTime.git</connection>
+  	<developerConnection>scm:git:https://github.com/RogerParkinson/MaduraDateTime.git</developerConnection>
   </scm>
   <issueManagement>
   	<system>GitHub</system>
@@ -158,7 +158,7 @@
 				<plugin>
 					<groupId>nz.co.senanque</groupId>
 					<artifactId>maduradocs</artifactId>
-					<version>6.0.5</version>
+					<version>6.1.0</version>
 					<executions>
 						<execution>
 							<goals>
