--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
 			</roles>
 		</developer>
 	</developers>
-  <scm>
-  	<url>https://github.com/RogerParkinson/MaduraDateTime/</url>
-  	<connection>scm:git:ssh://git@github.com:RogerParkinson/MaduraDateTime.git</connection>
-  	<developerConnection>scm:git:https://github.com/RogerParkinson/MaduraDateTime.git</developerConnection>
-  </scm>
+	<scm>
+		<connection>scm:git:git@github.com:RogerParkinson/MaduraDateTime.git</connection>
+		<url>scm:git:git@github.com:RogerParkinson/MaduraDateTime.git</url>
+		<developerConnection>scm:git:git@github.com:RogerParkinson/MaduraDateTime.git</developerConnection>
+	</scm>
   <issueManagement>
   	<system>GitHub</system>
   	<url>https://github.com/RogerParkinson/MaduraDateTime/issues</url>
@@ -61,10 +61,6 @@
 			<plugin>
 				<groupId>nz.co.senanque</groupId>
 				<artifactId>maduradocs</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -168,25 +164,25 @@
 					</executions>
 				</plugin>
 
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>properties-maven-plugin</artifactId>
-					<version>1.0-alpha-2</version>
-					<executions>
-						<execution>
-							<phase>initialize</phase>
-							<goals>
-								<goal>read-project-properties</goal>
-							</goals>
-							<configuration>
-								<files>
-									<file>../dev.properties</file>
-								</files>
-								<quiet>true</quiet>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
+			<plugin>
+				<groupId>org.kuali.maven.plugins</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.1.9</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<locations>
+								<location>${HOME}/madura.properties</location>
+							</locations>
+							<quiet>true</quiet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
